content/consul/v2.0.x/content/docs/monitor/telemetry/index.mdx
---
layout: docs
page_title: Consul product telemetry
description: >- 
  Consul agents generate operational metrics based the performance of different libraries and subsystems. Learn about telemetry monitoring options and opt-in to telemetry reporting to help us improve Consul.
# START AUTO GENERATED METADATA, DO NOT EDIT
created_at: 2026-04-06T11:28:06-07:00
last_modified: 2026-04-07T22:50:32.000Z
# END AUTO GENERATED METADATA
---

# Consul product telemetry

This topic provides an overview of Consul's product telemetry features, including how we collect data, how to opt-in to anonymized data collection, and how to integrate Consul with external providers such as Telegraf and Grafana.

## Telemetry in Consul

Consul agents generate metrics about their operations based the performance of different libraries and subsystems. For example, [operations to maintain cluster consensus](/consul/docs/concept/consensus) are controlled by the Raft library, which exposes [cluster leadership information on an agent](/consul/docs/monitor/telemetry/agent#leadership-changes). You can integrate Consul with telemetry tools such as [AppDynamics CNS](/consul/docs/monitor/telemetry/appdynamics) and [Telegraf](/consul/docs/monitor/telemetry/telegraf), or use [Grafana dashboards to monitor both Consul operations and service mesh performance](/consul/docs/observe/grafana).

To learn how to use Consul's telemetry to monitor your cluster's operations, including what metrics to look at and why they are important, refer to [Consul agent telemetry](/consul/docs/monitor/telemetry/agent).

## Opt-in to data reporting

We collect telemetry data about Consul's cluster operations to help us improve our software. This feature is disabled in Consul by default. To enable telemetry reporting, add the following parameter to your Consul agent configuration:

<!-- Need to confirm this configuration -->

```hcl
reporting {
    license {
        enabled = true
    }
}
```

### Your data and privacy

After you opt-in to telemetry reporting, we collect anonymized data about your cluster's operations and aggregate it for analysis. This data helps us understand how you use Consul so that we can improve the software with each subsequent release. Examples of the data we collect include:

- How many Consul server and client agents run in a cluster
- How many services the API gateway routes for the datacenter
- How often the gossip key is rotated
- Whether the audit log feature is enabled

We never collect personal or sensitive information. Telemetry reporting does not access any of the following Personally Identifiable Information (PII) or user data:

- user names
- email addresses
- individual IP addresses
- hostnames
- names of services, namespaces, partitions, or nodes
- KV entries
- contents of audit logs
- contents of configuration files

For a complete list of the data we collect, refer to [Consul agent telemetry reporting reference](/consul/docs/reference/agent/telemetry/reporting).